--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,10 @@
 #    group: root
 #    mode: '0755'
 
+- name: ensure dir exists
+  ansible.builtin.debug:
+    msg: "{{ potos_files.dest | dirname }}"
+
 - name: copy files
   ansible.builtin.template:
     src: "potos_files/{{ potos_files.src }}"
