--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,25 +1,19 @@
 ---
 
-#  ansible.builtin.template:
-#    src: 'potos.example.j2'
-#    dest: '/potos.example'
-#    owner: root
-#    group: root
-#    mode: '0755'
-
-- name: ensure base dir exists
+- name: ensure base dirs exists
   ansible.builtin.file:
-    path: "{{ potos_files.dest | dirname }}"
+    path: "{{ item.dest | dirname }}"
     state: directory
-    owner: root
-    group: root
-    mode: "0755"
+    owner: "{{ potos_files_default_owner }}"
+    group: "{{ potos_files_default_group }}"
+    mode: "{{ potos_files_default_dir_mode }}"
+  loop: "potos_files"
 
 - name: copy files
   ansible.builtin.template:
-    src: "potos_files/{{ potos_files.src }}"
-    dest: "{{ potos_files.dest }}"
-    owner: "{{ potos_files.owner }}"
-    group: "{{ potos_files.group }}"
-    mode: "{{ potos_files.mode }}"
-
+    src: "potos_files/{{ item.src }}"
+    dest: "{{ item.dest }}"
+    owner: "{{ item.owner }}"
+    group: "{{ item.group }}"
+    mode: "{{ item.mode }}"
+  loop: "potos_files"
